--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,9 @@ jobs:
         run: go test ./... -v
       - name: Staticheck
         run: |
+          # add executables installed with go get to PATH
+          # TODO: this will hopefully be fixed by
+          # https://github.com/actions/setup-go/issues/14
+          export PATH=${PATH}:`go env GOPATH`/bin
           go get -u honnef.co/go/tools/cmd/staticcheck
           staticcheck ./...
