--- a/lets.yaml
+++ b/lets.yaml
@@ -51,8 +51,11 @@ commands:
       - echo
       - "${LETS_CHECKSUM}"
 
-  update-lets-version:
+  version:
     description: Update version.go file with latest tag
+    options: |
+      Usage: lets version <version>
+      Options:
+        <version>   Set version
     cmd: |
-      VERSION=$(git describe | cut -d "v" -f 2)
-      sed -i -E "s/var version = \".*\"/var version = \"${VERSION}\"/g" version.go
+      sed -i -E "s/var version = \".*\"/var version = \"${LETSOPT_VERSION}\"/g" version.go
