--- a/lets.yaml
+++ b/lets.yaml
@@ -23,6 +23,9 @@ commands:
 
   test-env:
     description: Test env
+    env:
+      MY_ENV: "my env val"
+    cmd: echo ${LETSOPT_MY_ENV}
 
   test-eval_env:
     description: Test eval_env
