--- a/lets.yaml
+++ b/lets.yaml
@@ -66,4 +66,9 @@ commands:
   test:
     description: Run tests for lets
     cmd:
-      go test ./... -v
+      docker-compose run --rm test
+
+  staticcheck:
+    description: Run staticcheck for lets
+    cmd:
+      docker-compose run --rm staticheck
