add fmt lets command

--- a/lets.yaml
+++ b/lets.yaml
@@ -74,3 +74,8 @@ commands:
     description: Run staticcheck for lets
     cmd:
       docker-compose run --rm staticheck
+
+  fmt:
+    description: Run sfmt
+    cmd:
+      go fmt ./...
