add validation for circular depends, add validation for unknown field… (#7)
* add validation for circular depends, add validation for unknown fields, fix cmd as string list append, add tests

* fix staticcheck

* add fmt lets command

--- a/lets.yaml
+++ b/lets.yaml
@@ -1,9 +1,5 @@
 shell: bash
 
-env:
-
-eval_env:
-
 commands:
   test-options:
     description: Test options
@@ -78,3 +74,8 @@ commands:
     description: Run staticcheck for lets
     cmd:
       docker-compose run --rm staticheck
+
+  fmt:
+    description: Run sfmt
+    cmd:
+      go fmt ./...
