--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,3 +5,6 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install git gcc
 RUN go get -u honnef.co/go/tools/cmd/staticcheck
+
+COPY . .
+RUN go get ./...
