add coverage command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,4 @@ services:
 
   test:
     <<: *base
-    command: go test ./... -v
+    entrypoint: [go, test, ./..., -v, -coverprofile=coverage.out]
