--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,5 +6,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install git gcc
 RUN go get -u honnef.co/go/tools/cmd/staticcheck
 
-COPY . .
+COPY go.mod .
+COPY go.sum .
+
 RUN go get ./...
