refactor root command run
- move config read and parse to NewRootCmd
- add LETS_CONFIG_DIR env var - redefines dir where commands will be executed
- handle --help if no lets.yaml
- error if lets running in dir without lets.yaml
- set Dir for exec.Command from config.Workdir (TODO, however checksums still failing as ReadFile accepts relative path)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
+        env:
+          LETS_CONFIG_DIR: ..
         run: go test ./... -v
       - name: Staticheck
         run: |
