--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,6 @@ services:
 
   test:
     <<: *base
+    environment:
+      LETS_CONFIG_DIR: ..
     entrypoint: [go, test, ./..., -v, -coverprofile=coverage.out]
