keys of checksum map must be uppercased and snakecased

--- a/lets-test.yaml
+++ b/lets-test.yaml
@@ -59,9 +59,9 @@ commands:
     checksum:
       compose:
         - docker-compose
-      misc:
+      misc-files:
         - README.md
         - LICENSE
     cmd:
       - echo
-      - "${LETS_CHECKSUM} ${LETS_CHECKSUM_COMPOSE} ${LETS_CHECKSUM_MISC}"
+      - "${LETS_CHECKSUM} ${LETS_CHECKSUM_COMPOSE} ${LETS_CHECKSUM_MISC_FILES}"
