replace module and repo name with lets-cli

--- a/lets.yaml
+++ b/lets.yaml
@@ -48,4 +48,5 @@ commands:
 
   build-and-install:
     description: Build and install lets from source code to /usr/local/bin/lets
-    cmd: go build -o lets *.go && sudo mv ./lets /usr/local/bin/lets
+    cmd: |
+      go build -ldflags="-X main.version=development" -o lets *.go && sudo mv ./lets /usr/local/bin/lets
