provide context and listen to some system signals to handle them

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,8 @@ ENV GOPROXY https://proxy.golang.org
 WORKDIR /app
 
 RUN apt-get update && apt-get install git gcc
+
+# install dev tools, linters, etc.
 RUN go get -u honnef.co/go/tools/cmd/staticcheck
 
 COPY go.mod .
