--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,7 @@ on:
   push:
   pull_request:
     types: [assigned, opened, synchronize, reopened]
+
 name: Test
 jobs:
   test:
@@ -21,6 +22,16 @@ jobs:
         env:
           LETS_CONFIG_DIR: ..
         run: go test ./... -v
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13.x
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Lint
         run: |
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b ./bin v1.24.0
