use bats - bash automated testing for lets commands output testing, rewrite one test for root cmd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,11 @@ services:
     environment:
       LETS_CONFIG_DIR: ..
     entrypoint: [go, test, ./..., -v, -coverprofile=coverage.out]
+
+  test-bats:
+    <<: *base
+    command: |
+      sh -c "
+        go build -o /usr/bin/lets *.go
+        bats tests
+      "
