--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,4 +8,9 @@ RUN apt-get update && apt-get install git gcc
 COPY go.mod .
 COPY go.sum .
 
+RUN cd /tmp && \
+    git clone https://github.com/sstephenson/bats.git && \
+    cd bats && \
+    ./install.sh /usr
+
 RUN go get ./...
