--- a/lets.yaml
+++ b/lets.yaml
@@ -15,13 +15,22 @@ commands:
       sed -i -E "s/var version = \".*\"/var version = \"${LETSOPT_VERSION}\"/g" version.go
 
   test:
-    description: Run tests for lets
+    description: Run unit tests
     depends: [build-docker]
     cmd:
       - docker-compose
       - run
       - --rm
       - test
+
+  test-bats:
+    description: Run bats tests
+    depends: [build-docker]
+    cmd:
+      - docker-compose
+      - run
+      - --rm
+      - test-bats
 
   coverage:
     description: Run tests for lets
