--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
 
   test:
     <<: *base
+    environment:
+      LETS_CONFIG_DIR: ..
     entrypoint: [go, test, ./..., -v, -coverprofile=coverage.out]
 
   test-bats:
