--- a/build.yaml
+++ b/build.yaml
@@ -2,6 +2,10 @@ env:
   DOCKER_BUILDKIT: "1"
 
 commands:
-  build-docker:
+  build-lets-image:
     description: Build lets docker image
     cmd: docker build -t lets -f docker/Dockerfile .
+
+  build-lint-image:
+    description: Build lets lint docker image
+    cmd: docker build -t lets-lint -f docker/Dockerfile.lint .
