add version to docs, change dev version when build-and-install

--- a/lets.yaml
+++ b/lets.yaml
@@ -73,4 +73,5 @@ commands:
   build-and-install:
     description: Build and install lets development version from source code to /usr/local/bin/lets
     cmd: |
-      go build -ldflags="-X main.version=dev-$(git describe)" -o lets *.go && sudo mv ./lets /usr/local/bin/lets
+      VERSION=$(git describe)
+      go build -ldflags="-X main.version=${VERSION:1}-dev" -o lets *.go && sudo mv ./lets /usr/local/bin/lets
