Implemented cmd as map, refactor run.go, add errgroup, update tests
- add parsing for cmd as map in config
- run commands from map in parallel and wait for them
- add errgroup dependency for running commands in parallel
- move run.go, run_env.go and run_env.go to runner package
- refactor run.go, update args for some function - pass only data needed for function instead of whole Command instance
- add tests for cmd-as-map (for persisted checksums as well)
- update doc

--- a/tests/command_cmd/lets.yaml
+++ b/tests/command_cmd/lets.yaml
@@ -15,3 +15,23 @@ commands:
     description: Test cmd as array
     cmd:
       - echo
+
+  cmd-as-map:
+    description: Test cmd as map
+    cmd:
+      one: echo "1"
+      two: echo "2"
+
+  cmd-as-map-error:
+    description: Test cmd as map with error
+    cmd:
+      one: echo "1"
+      two: exit 2
+
+  cmd-as-map-env-propagated:
+    description: Test cmd as map - env propagated to all commands
+    env:
+      TEST_ENV: hello
+    cmd:
+      one: echo "1 ${TEST_ENV}"
+      two: echo "2 ${TEST_ENV}"
