--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,9 @@ jobs:
         platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
+      - name: Install Dependencies (macOS)
+        if: runner.os == 'macOS'
+        run: brew install bash
       - name: Setup go
         uses: actions/setup-go@v1
         with:
