--- a/.golang-ci.yaml
+++ b/.golang-ci.yaml
@@ -12,6 +12,8 @@ linters-settings:
     settings:
       mnd:
         checks: case,condition,return
+  lll:
+    line-length: 120
 
 issues:
   exclude-rules:
