--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,3 +23,14 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  aur-sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sync AUR package with Github release
+        uses: maniaciachao/aur-sync-action@v1.2
+        with:
+          package_name: lets-bin
+          github_repo: 'lets-cli/lets'
+          commit_username: 'Github Action Bot'
+          commit_email: kindritskiy.m@gmail.com
+          ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
