--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Sync AUR package with Github release
-        uses: maniaciachao/aur-sync-action@v1.2
+        uses: maniaciachao/aur-sync-action@master
         with:
           package_name: lets-bin
           github_repo: 'lets-cli/lets'
