add --env and -E flag

--- a/lets.yaml
+++ b/lets.yaml
@@ -83,3 +83,8 @@ commands:
   run-docs:
     cmd: |
       npm --prefix docs start
+
+  say:
+    env:
+      NAME: "Max"
+    cmd: echo Hello ${NAME}
