fix --only and --exclude flags - attach them to root command

--- a/lets.yaml
+++ b/lets.yaml
@@ -84,7 +84,7 @@ commands:
     cmd: |
       npm --prefix docs start
 
-  say:
-    env:
-      NAME: "Max"
-    cmd: echo Hello ${NAME}
+  foo:
+    cmd:
+      redis: echo "Redis"
+      app: echo "App"
