--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -39,6 +39,7 @@ brews:
     tap:
       owner: lets-cli
       name: homebrew-tap
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
 
 checksum:
   name_template: '{{ .ProjectName }}_checksums.txt'
