add LETS_COMMAND_NAME as env var, and some fixes from review

--- a/tests/set_env/lets.yaml
+++ b/tests/set_env/lets.yaml
@@ -13,3 +13,7 @@ commands:
     env:
       NAME: Rick
     cmd: echo "Hello ${NAME}"
+
+  say_command:
+    description: Say command name
+    cmd: echo $LETS_COMMAND_NAME
