--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.16.0-buster
+FROM golang:1.17.5-buster
 
 ENV GOPROXY https://proxy.golang.org
 WORKDIR /app
@@ -9,6 +9,8 @@ RUN cd /tmp && \
     git clone https://github.com/sstephenson/bats.git && \
     cd bats && \
     ./install.sh /usr
+
+RUN go install gotest.tools/gotestsum@latest
 
 COPY go.mod .
 COPY go.sum .
