add LETS_COMMAND_ARGS, fix special bash env vars, add tests, update docs

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
         run: go test ./... -v
       - name: Test bats
         env:
-          LETS_NO_COLOR_OUTPUT: 1
+          NO_COLOR: 1
         run: |
           git clone https://github.com/sstephenson/bats.git bats-repo
           cd bats-repo
