--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   test-bats:
     <<: *base
     environment:
-      LETS_NO_COLOR_OUTPUT: 1
+      NO_COLOR: 1
     command: |
       bash -c '
         go build -o /usr/bin/lets *.go
