--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,14 @@ services:
     <<: *base
     environment:
       NO_COLOR: 1
+      BATS_UTILS_PATH: /bats
     command: |
       bash -c '
         go build -o /usr/bin/lets *.go
+        ARGS="--tap --verbose-run --trace"
         if [[ -n "${LETSOPT_TEST}" ]]; then
-          bats tests/"${LETSOPT_TEST}"
+          bats ${ARGS} tests/"${LETSOPT_TEST}"
         else
-          bats tests
+          bats ${ARGS} tests
         fi
       '
