--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,3 +8,10 @@ updates:
     schedule:
       day: sunday
       interval: weekly
+
+  - package-ecosystem: "npm"
+    directory: "/docs"
+    schedule:
+      interval: "weekly"
+    # Disable all pull requests for npm dependencies in docs directory
+    open-pull-requests-limit: 0
