update yamlv3, fix bug with boolean-like names such as y or yes

--- a/tests/command_options/lets.yaml
+++ b/tests/command_options/lets.yaml
@@ -30,5 +30,10 @@ commands:
 
   test-proxy-options:
     description: Test passthrough options (lets must append them to ./echoArgs.sh)
-    cmd: 
+    cmd:
       - ./echoArgs.sh
+
+  say:
+    options: |
+      Usage: lets say <say>
+    cmd: echo "Hi ${LETSOPT_SAY}"
