--- a/tests/global_env/lets.yaml
+++ b/tests/global_env/lets.yaml
@@ -1,15 +1,23 @@
 shell: bash
 
 env:
+  ONE: 1
   TWO: two
   THREE: "3"
+  BAR:
+    sh: echo Bar
+  FOO:
+    checksum: [foo.txt]
 
 commands:
   global-env:
     description: Test global env
     env:
-      ONE: "1"
+      FOUR: "4"
     cmd: |
       echo ONE=${ONE}
       echo TWO=${TWO}
       echo THREE=${THREE}
+      echo FOUR=${FOUR}
+      echo BAR=${BAR}
+      echo FOO=${FOO}
