refactor completions, replace docopt.go with custom docopt.go

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,11 @@
-FROM golang:1.18-buster
+FROM golang:1.18.3-bullseye
 
 ENV GOPROXY https://proxy.golang.org
 WORKDIR /app
 
-RUN apt-get update && apt-get install git gcc
+RUN apt-get update && apt-get install -y \
+    git gcc \
+    zsh  # for zsh completion tests
 
 RUN cd /tmp && \
     git clone https://github.com/bats-core/bats-core && \
