--- a/lets.yaml
+++ b/lets.yaml
@@ -1,19 +1,12 @@
 shell: bash
 
 mixins:
-  - build.yaml
+  - lets.build.yaml
   - -lets.my.yaml
 
 env:
-    NAME: "max"
-    AGE: 27
-    CURRENT_UID:
-      sh: echo "`id -u`:`id -g`"
-    NGINX_DEV:
-      checksum: [go.mod, go.sum]
-
-eval_env:
-  CURRENT_UID: echo "`id -u`:`id -g`"
+  CURRENT_UID:
+    sh: echo "`id -u`:`id -g`"
 
 commands:
   release:
@@ -41,6 +34,8 @@ commands:
     depends: [build-lets-image]
     options: |
       Usage: lets test-bats [<test>]
+      Example:
+        lets test-bats config_version.bats
     cmd: |
       docker-compose run --rm test-bats
 
