--- a/lets.yaml
+++ b/lets.yaml
@@ -33,17 +33,25 @@ commands:
     description: Run bats tests
     depends: [build-lets-image]
     options: |
-      Usage: lets test-bats [<test>]
+      Usage: lets test-bats [<test>] [--opts=<opts>]
       Example:
         lets test-bats config_version.bats
     cmd: |
       docker-compose run --rm test-bats
+
+  test-completions:
+    ref: test-bats 
+    args: zsh_completion.bats_
+    description: |
+      Run completions tests
+      This tests are separate because it hangs on Github Actions
 
   test:
     description: Run unit and bats tests
     depends:
       - test-unit
       - test-bats
+      - test-completions
 
   coverage:
     description: Run tests for lets
